fix overflow

--- a/demos/custom.css
+++ b/demos/custom.css
@@ -1,6 +1,8 @@
 body {
   background: rgb(2,0,36);
   background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 23%, rgba(161,0,0,1) 100%);
+}
+html {
   overflow: initial;
 }
 .container {
